--- a/Main.html
+++ b/Main.html
@@ -170,12 +170,15 @@
     <div class="offer1">
         <div class="offer12">
             <img src="Images/Xiomi exchange.webp" alt="">
+            <h2>Xiomi exchange</h2>
         </div>
         <div class="offer12">
             <img src="Images/Power Bank.webp" alt="">
+            <h2>Power Bank</h2>
         </div>
         <div class="offer12">
             <img src="Images/Audio.webp" alt="">
+            <h2>Adio Gadgets</h2>
         </div>
         
     </div>
